--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,9 @@
         "helmet": "^7.1.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.0.3",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
